fix title wrap for less than 400px

--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,7 @@ h1 {
 
 /*browser windows smaller than 850px*/
 @media (max-width: 600px) {
-   .headerimage{ height:250px;}
+   .headerimage{ height:300px;}
    .div-title-block {
     font-size: 1.6em !important;
    }
@@ -499,13 +499,16 @@ h1 {
 
 }
 
-@media  (max-width: 479px) {
+@media  (max-width: 480px) {
 	.full-width-col { font-size:18px;}
 	 .container {margin-bottom: 40px; padding:0px 4px;}
    .headerimage{width: 100%; height: 300px;}
    .headerwrapper{padding-top:80px;}
+   h1 { font-size:24px;}
  
 }
+
+
 
 
 
